[gd_scene format=3 uid="uid://b32476hejmrnj"]

[ext_resource type="Script" uid="uid://csd2hssk8e5f5" path="res://player.gd" id="1_4pouc"]
[ext_resource type="Texture2D" uid="uid://1huvnyjwjxyr" path="res://Mini Pixel Pack 3/Player ship/Boosters (16 x 16).png" id="2_6cdot"]
[ext_resource type="PackedScene" uid="uid://ce2sbgdju6rp7" path="res://bullets/bullet.tscn" id="2_6pkbm"]
[ext_resource type="PackedScene" uid="uid://c75hkmg7jyox6" path="res://bullets/bullet_yellow.tscn" id="3_dw050"]
[ext_resource type="Texture2D" uid="uid://4nsv8l6yppaf" path="res://Mini Pixel Pack 3/Player ship/Boosters_left (16 x 16).png" id="3_n7bvj"]
[ext_resource type="PackedScene" uid="uid://bb1nkdpy32wgs" path="res://bullets/absorb.tscn" id="4_b26j0"]
[ext_resource type="Texture2D" uid="uid://b1jinxtgd3rv0" path="res://Mini Pixel Pack 3/Player ship/Boosters_right (16 x 16).png" id="4_bbrn4"]
[ext_resource type="Texture2D" uid="uid://8sql62rflh1i" path="res://Player_topdown.png" id="5_n7ghd"]
[ext_resource type="Texture2D" uid="uid://2aa2aerwlxgm" path="res://Player_topdown_placeholder_transformation_sprite.png" id="6_b26j0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rbfoc"]
atlas = ExtResource("2_6cdot")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqk0y"]
atlas = ExtResource("2_6cdot")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvhhs"]
atlas = ExtResource("3_n7bvj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nji5"]
atlas = ExtResource("3_n7bvj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ido4s"]
atlas = ExtResource("4_bbrn4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ed7"]
atlas = ExtResource("4_bbrn4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_p6f8n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbfoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqk0y")
}],
"loop": true,
"name": &"forward",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvhhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nji5")
}],
"loop": true,
"name": &"left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ido4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ed7")
}],
"loop": true,
"name": &"right",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b26j0"]
size = Vector2(50.000072, 25.000032)

[node name="Player" type="Area2D" unique_id=679744870]
position = Vector2(0, 6.9999995)
scale = Vector2(0.4, 0.4)
script = ExtResource("1_4pouc")
speed = 125.0
bullet_scene = ExtResource("2_6pkbm")
bullet_yellow_scene = ExtResource("3_dw050")
absorb_scene = ExtResource("4_b26j0")
dash_speed = 300.0
default_sprite_texture = ExtResource("5_n7ghd")
yellow_sprite_texture = ExtResource("6_b26j0")

[node name="Ship" type="Sprite2D" parent="." unique_id=1169473419]
position = Vector2(5, -4.999997)
scale = Vector2(0.25, 0.195)
texture = ExtResource("5_n7ghd")
hframes = 3
frame = 1
region_enabled = true
region_rect = Rect2(176, 240, 1192, 416)

[node name="Boosters" type="AnimatedSprite2D" parent="Ship" unique_id=1664352415]
position = Vector2(-130, -9.469696)
sprite_frames = SubResource("SpriteFrames_p6f8n")
animation = &"forward"
autoplay = "forward"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1354655136]
position = Vector2(-5.9604633e-07, -14.999998)
scale = Vector2(0.99999845, 0.99999845)
shape = SubResource("RectangleShape2D_b26j0")

[node name="GunCooldown" type="Timer" parent="." unique_id=1672746794]
one_shot = true

[node name="AbsorbCooldown" type="Timer" parent="." unique_id=2047596241]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_gun_cooldown_timeout"]
[connection signal="timeout" from="AbsorbCooldown" to="." method="_on_absorb_cooldown_timeout"]
